--- a/403_HW_DataStructure/Views/web.config
+++ b/403_HW_DataStructure/Views/web.config
@@ -16,7 +16,7 @@
         <add namespace="System.Web.Mvc.Ajax" />
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Routing" />
-        <add namespace="_403_HW_DataStructure" />
+        <add namespace="IamGonnaMakeItWork" />
       </namespaces>
     </pages>
   </system.web.webPages.razor>
